--- a/docs/assets/main.scss
+++ b/docs/assets/main.scss
@@ -89,13 +89,17 @@ header {
  * Footer
  */
 .footer {
-  padding: 120px 0;
+  padding-top: 40px;
   font-family: "Lato", sans-serif;
   font-weight: 300;
   font-style: normal;
   color: #dfdfdf;
   line-height: 1.8em;
+
   .footer-text {
+    font-size: 0.8em;
+    text-align: justify;
+
     a {
       &:hover,
       &:focus {
@@ -103,17 +107,20 @@ header {
         text-decoration: none;
       }
     }
+
     ul {
       list-style: none;
     }
   }
+
   h5 {
-    text-transform:  uppercase;
+    text-transform: uppercase;
     font-family: "Lato", sans-serif;
     font-weight: 300;
     font-style: normal;
     color: #ffffff;
     margin-top: 0.8em;
+
     &:after {
       content: "";
       background: #5F368A;
@@ -123,18 +130,31 @@ header {
       max-width: 50px;
     }
   }
+
   .footer-links {
     a {
       color: $info;
       text-decoration: none;
     }
   }
+
   .logo {
-    width: 300px; /* Default size */
+    width: 200px; /* Default size */
   }
 
   .ncris {
-    width: 200px; /* Default size */
+    width: 100px; /* Default size */
+  }
+
+  .custom-flex {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0.5rem;
+    align-items: stretch;
+  }
+
+  .acknowledge {
+    margin-right: 60px;
   }
 
   @media (min-width: 990px) {
@@ -146,30 +166,56 @@ header {
 
   /* For screens smaller than 1400px */
   @media (max-width: 1400px) {
+    .custom-flex {
+      flex-direction: row;
+      justify-content: center;
+    }
+
     .logo {
-      width: 220px;
+      width: 180px;
     }
 
     .ncris {
-      width: 190px;
+      width: 90px;
+    }
+
+    .acknowledge {
+      margin-right: 40px;
     }
   }
 
   /* For screens smaller than 1000px */
   @media (max-width: 1000px) {
+    .custom-flex {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
+
+    .custom-flex > .col {
+      flex: 1 1 50%; /* Two columns per row */
+    }
+
+    .footer-text {
+      white-space: normal;
+    }
+
     .logo {
       width: 170px;
     }
 
     .ncris {
-      width: 120px;
+      width: 80px;
     }
   }
 
   /* For screens smaller than 800px */
   @media (max-width: 800px) {
+    .custom-flex {
+      flex-direction: column;
+    }
+
     .ncris {
-      width: 100px;
+      width: 70px;
       margin-bottom: 20px;
     }
 
@@ -190,9 +236,8 @@ header {
   }
   .socials i {
     margin-right: 7px;
-    margin-top: 30px;
     margin-bottom: 30px;
-    font-size: 30px;
+    font-size: 20px;
   }
 }
 
